2004-05-06 Ian Rutt
 * Rationalisation of calc_coverage (glimmer_object.f90), with 
	global grid objects.
 * Minor formatting changes.
 * Completed adding initialisation to derived types and rejigging
	namelist reads to avoid confusion about default values.
 * Coded alternative, hopefully faster calc_coverage routine.
 * Made efficiency alterations to new_upscale code.
 * Duplicated mean_to_global (glimmer_interp.f90) in single and
	double precision copies (in terms of array local) and
	added appropriate aliasing interface block. This was to
	allow the addition of a compile flag to invoke a single-precision
	interface (compile with GLIMMER_SP defined).
 * Corrected error in GMT code - sines and cosines being taken without 
	converting from degrees to radians!

2004-05-05 Ian Rutt
 * Realised several crucial aspects of the orography output were
	missing, so added them. Produces orography as expected now,
	but some structural changes are needed, I think.
 * Restructured code so that global grid definitions have their own 
	derived type, which simplifies things. However, more rationalisation 
	and simplification still possible
 * Minor formatting, and removal of redundant stress arrays

2004-05-04 Ian Rutt
 * Added upscale type to glimmer_interp.f90 and adjusted code 
  	accodingly. This was to enable the output of orography 
	at any resolution, as needed by the IGCM. 
 * ***NB*** This hasn't been tested properly yet, and the
	restarts have been broken by it, as there wasn't time
 	to add routine writing the upscaling to a restart file
 * Other minor formating changes, and addition of null pointer
	initialisation in some places

2004-04-27 Ian Rutt
 * Added doc comments to gmt.f90
 * Updated return value documentation throughout to !*RV
 * Other minor documentation and formatting changes
 * Moved glimmer_params initialisation to type definition
	in line with move to f95, and added null 
	initialisation for pointer arrays. (glimmer.f90)