@@ -1,3 +1,8 @@
+2004-05-11 Ian Rutt
+ * Removed redundant xscale and yscale components from projection type, 
+	which were originally set equal to dx and dy. All references to
+	them have been changed accordingly.
+
 2004-05-06 Ian Rutt
  * Rationalisation of calc_coverage (glimmer_object.f90), with 
 	global grid objects.
